Fixed +1 alignment

--- a/resources/public/cognition.css
+++ b/resources/public/cognition.css
@@ -328,7 +328,7 @@ footer .fb-like {
     width: 74px;
 }
 footer .plusone {
-    width: 48px;
+    width: 59px;
 }
 
 #requestStats {
